<resources>
    <string name="app_name">LessionProject1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="header">中山大学课外体育积分电子认证系统</string>
    <string name="sysuDes">sysu</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="shetuan">社团</string>
    <string name="manager">管理者</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
