<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />
    <ImageView
        android:contentDescription="@string/sysuDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/username_input" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入用户名"
            android:gravity="center"
            android:id="@+id/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/password_input" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="请输入密码"
            android:gravity="center"
            android:id="@+id/password" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/rdbtn1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/chose_group">
        <RadioButton
            style="@style/radio_btn_style"

            android:text="@string/student"
            android:textSize="@dimen/myTextSize"
            android:id="@+id/rdbtn1" />
        <RadioButton
            style="@style/radio_btn_style"
            android:text="@string/teacher"
            android:textSize="@dimen/myTextSize"
            android:id="@+id/rdbtn2"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <RadioButton
            style="@style/radio_btn_style"
            android:text="@string/shetuan"
            android:textSize="@dimen/myTextSize"
            android:id="@+id/rdbtn3"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
        <RadioButton
            style="@style/radio_btn_style"
            android:text="@string/manager"
            android:textSize="@dimen/myTextSize"
            android:id="@+id/rdbtn4"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/myTextSize"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/button_color"
            android:background="@drawable/btn_style"
            android:id="@+id/login_btn" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/myTextSize"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/button_color"
            android:background="@drawable/btn_style"
            android:id="@+id/register_btn" />
    </LinearLayout>

</LinearLayout>